# mcp_gateway

./: .gitignore  README.md  docker-compose.nacos.yml  docker-compose.redis.yml  pyproject.toml
.codex/plans/main/: TASKS.md
config/: mcp-gateway-nacos-local.yaml  mcp-gateway-redis-local.yaml  mcp-gateway.yaml
deploy/prometheus/: mcp-gateway-alerts.yml
docs/codex/v1/: status.md
examples/: mock_mcp_server.py  publish_schemas_to_nacos.py  redis_governance_smoke.py  register_mcp_server_to_nacos.py
examples/java/nacos-registration/: KnowledgeSearchMetadata.java  McpServerNacosLifecycle.java  NacosMcpServerRegistrar.java  README.md  RegisterMcpServerExample.java
src/mcp_gateway/: __init__.py  main.py  runtime.py
src/mcp_gateway/api/: admin.py  response_envelope.py  tools.py
src/mcp_gateway/catalog/: tool_catalog.py
src/mcp_gateway/client/: base.py  factory.py  mock_mcp_client.py  streamable_http_client.py
src/mcp_gateway/config/: gateway_config.py
src/mcp_gateway/discovery/: base.py  factory.py  metadata_parser.py  mock_discovery.py  nacos_discovery.py
src/mcp_gateway/domain/: errors.py  (+1 more)
tests/: test_admin_api.py  test_admin_authorizer.py  test_api.py  test_audit.py  test_catalog_router.py  test_circuit_breaker.py  test_config_policy.py  test_health_checker.py  test_java_nacos_registration_example.py  test_metadata_parser.py  test_metrics.py  test_nacos_discovery.py  test_nacos_registration.py  test_nacos_schema_config.py  test_observability_docs.py  test_rate_limiter.py  test_runtime_snapshot.py  test_schema_registry.py  test_streamable_http_client.py
(+34 files in other folders)
